apps/opa/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opa
  namespace: opa
  labels:
    app.kubernetes.io/instance: opa
    app.kubernetes.io/name: opa
spec:
  ports:
    - port: 8181
      protocol: TCP
      targetPort: http
      name: http
  selector:
    app.kubernetes.io/instance: opa
    app.kubernetes.io/name: opa
  type: ClusterIP
